######## 2016-01-04 ########
alter table shop_items_product add column is_watermark tinyint(1) default 0;

############2015-12-26#####################
alter table flashsale_trade add `extras_info` varchar(256) NOT NULL DEFAULT '{}';

alter table supplychain_supply_supplier add column supplier_type int(11) default 0;
alter table supplychain_supply_supplier add column supplier_zone int(11) default 0;
CREATE INDEX `supplychain_supply_supplier_787383db` ON `supplychain_supply_supplier` (`supplier_zone`);
############2015-12-19#####################
alter table flashsale_customshare add column share_type varchar(8) not null;
############2015-12-17#####################
alter table pay_coupon_template add column target_user int(11) default 1;
############2015-12-16#####################
alter table pay_coupon_template add column way_type int(11) default 0;
alter table pay_coupon_template add column post_img varchar(512) default null ;
############2015-12-08#####################
alter table flashsale_pay_product_refund_record add column sale_date date Not null;
CREATE INDEX `flashsale_pay_product_refund_record_96b5e96` ON `flashsale_pay_product_refund_record` (`sale_date`);
############2015-12-07#####################
CREATE INDEX `flashsale_pay_product_refund_record_3216ff68` ON `flashsale_pay_product_refund_record` (`created`);
############2015-12-05#####################
alter table flashsale_productdetail  add column `is_sale` bool NOT NULL;
alter table flashsale_productdetail  add column `order_weight` integer NOT NULL;
CREATE INDEX `flashsale_productdetail_650909aa` ON `flashsale_productdetail` (`is_sale`);
CREATE INDEX `flashsale_productdetail_522af0b0` ON `flashsale_productdetail` (`order_weight`);
############2015-11-16#####################
alter table flashsale_refund add column proof_pic longtext;
alter table flashsale_order add column `sign_time` datetime default null;
