@@ -1,3 +1,6 @@
+######## 2016-01-012 ########
+alter table supplychain_supply_product add column librarian varchar(32) default null ;
+alter table supplychain_supply_product add column buyer varchar(32) default null ;
 ######## 2016-01-04 ########
 alter table shop_items_product add column is_watermark tinyint(1) default 0;
 
